Add UI controls for selecting video resolution/aspect-ratio.

--- a/examples/index.html
+++ b/examples/index.html
@@ -69,6 +69,18 @@
                     <label class="form-check-label">Open DataChannel</label>
                 </div>
             </div>
+            <h4>Video Resolution</h4>
+            <p><small>Set the desired video resolution and aspect ratio.</small></p>
+            <div class="form-group">
+                <div class="form-check form-check">
+                    <input class="form-check-input" type="radio" name="resolution" id="widescreen" value="option1" checked>
+                    <label class="form-check-label" for="widescreen">1280x720 <small>(16:9 widescreen)</small></label>
+                </div>
+                <div class="form-check form-check">
+                    <input class="form-check-input" type="radio" name="resolution" id="fullscreen" value="option2">
+                    <label class="form-check-label" for="fullscreen">640x480 <small>(4:3 fullscreen)</small></label>
+                </div>
+            </div>
             <h4>NAT Traversal</h4>
             <p><small>Control settings for ICE candidate generation.</small></p>
             <div class="form-group">
