Copy the examples to the 'dist' directory for use with GitHub pages.

--- a/examples/index.html
+++ b/examples/index.html
@@ -184,7 +184,7 @@
 
 <div id="test"></div>
 
-<script src="../dist/kvs-webrtc.js"></script>
+<script src="../kvs-webrtc.js"></script>
 <script src="./master.js"></script>
 <script src="./viewer.js"></script>
 <script src="./createSignalingChannel.js"></script>
