Upgrade to official release of the AWS SDK for JS.

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./app.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="./aws-sdk.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
