--- a/examples/index.html
+++ b/examples/index.html
@@ -184,7 +184,7 @@
 
 <div id="test"></div>
 
-<script src="../kvs-webrtc.js"></script>
+<script src="https://unpkg.com/amazon-kinesis-video-streams-webrtc@1.0.2/dist/kvs-webrtc.min.js"></script>
 <script src="./master.js"></script>
 <script src="./viewer.js"></script>
 <script src="./createSignalingChannel.js"></script>
