Multiple tracks (HACKY)

--- a/examples/index.html
+++ b/examples/index.html
@@ -150,9 +150,15 @@
                     <h5>Return Channel</h5>
                     <div class="video-container"><video class="local-view" autoplay playsinline controls muted /></div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col">
-                    <h5>From Master</h5>
-                    <div class="video-container"><video class="remote-view" autoplay playsinline controls /></div>
+                    <h5>Stream 1</h5>
+                    <div class="video-container"><video class="remote-view-1" autoplay playsinline controls muted /></div>
+                </div>
+                <div class="col">
+                    <h5>Stream 2</h5>
+                    <div class="video-container"><video class="remote-view-2" autoplay playsinline controls /></div>
                 </div>
             </div>
             <div class="row datachannel">
