--- a/examples/index.html
+++ b/examples/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -175,11 +176,24 @@
             </div>
         </div>
 
-        <h3 id="logs-header">Logs</h3>
-        <div class="card bg-light mb-3">
-            <pre id="logs" class="card-body text-monospace preserve-whitespace"></pre>
-        </div>
 
+        <div id="debug" class="d-none">
+            <h2>WebRTC session info</h2>
+            <div class="row">
+                <div class="col">
+                    <h5 id="logs-header">Logs</h5>
+                    <div class="card bg-light mb-3">
+                        <pre id="logs" class="card-body text-monospace preserve-whitespace"></pre>
+                    </div>
+                </div>
+                <div class="col">
+                    <h5 id="stats-report">Peer Connection Stats</h5>
+                    <div class="card bg-light mb-3">
+                        <pre id="stats" class="card-body text-monospace preserve-whitespace"></pre>
+                    </div>
+                </div>
+            </div>            
+        </div>
     </div>
 </div>
 
