Adds join session button on test page

--- a/examples/index.html
+++ b/examples/index.html
@@ -140,6 +140,7 @@
                   <button type="button" class="btn btn-primary">Send DataChannel Message</button>
                 </span>
                 <button id="stop-master-button" type="button" class="btn btn-primary">Stop Master</button>
+                <button id="join-session-button" type="button" class="btn btn-primary">Join Session</button>
             </div>
         </div>
 
