--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./app.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
+    <script src="aws-sdk-2.1363.0.min.js"></script>
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
@@ -104,6 +104,12 @@
                     <label class="form-check-label">Use trickle ICE <small>(not supported by Alexa devices)</small></label>
                 </div>
             </div>
+            <h4>WebRTC Storage</h4>
+            <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" name="natTraversal" id="ingestMedia" value="option1" checked>
+                <label class="form-check-label">Ingest media</label>
+            </div>
+            <br>
             <div>
                 <button id="master-button" type="button" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="button" class="btn btn-primary">Start Viewer</button>
@@ -116,11 +122,11 @@
             <div class="row">
                 <div class="col">
                     <h5>Master Section</h5>
-                    <div class="video-container"><video class="local-view" autoplay playsinline controls muted /></div>
+                    <div class="video-container"><video class="local-view" autoplay playsinline controls muted></video></div>
                 </div>
                 <div class="col">
                     <h5>Viewer Return Channel</h5>
-                    <div class="video-container"><video class="remote-view" autoplay playsinline controls /></div>
+                    <div class="video-container"><video class="remote-view" autoplay playsinline controls></video></div>
                 </div>
             </div>
             <div class="row datachannel">
