--- a/examples/index.html
+++ b/examples/index.html
@@ -46,9 +46,12 @@
                 <input type="password" class="form-control" id="sessionToken" placeholder="Session token">
             </div>
             <h4>Signaling Channel</h4>
-            <div class="form-group">
+            <div>
                 <label>Channel Name</label>
-                <input type="text" class="form-control" id="channelName" placeholder="Channel">
+                <div class="form-group" style="display: flex; justify-content: space-between;">
+                    <input type="text" class="form-control" id="channelName" placeholder="Channel">
+                    <button id="create-channel-button" type="button" class="btn btn-primary" style="white-space: nowrap;" title="Create a signaling channel with this name.">Create Channel</button>
+                </div>
             </div>
             <div class="form-group">
                 <label>Client Id <small>(optional)</small></label>
@@ -107,13 +110,12 @@
             <h4>WebRTC Storage</h4>
             <div class="form-check form-check">
                 <input class="form-check-input" type="checkbox" name="natTraversal" id="ingestMedia" value="option1" checked>
-                <label class="form-check-label">Ingest media</label>
+                <label class="form-check-label">Ingest media <small>(master only)</small></label>
             </div>
             <br>
             <div>
                 <button id="master-button" type="button" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="button" class="btn btn-primary">Start Viewer</button>
-                <button id="create-channel-button" type="button" class="btn btn-primary">Create Channel</button>
             </div>
         </form>
 
