--- a/examples/index.html
+++ b/examples/index.html
@@ -109,7 +109,7 @@
             </div>
             <h4>WebRTC Storage</h4>
             <div class="form-check form-check">
-                <input class="form-check-input" type="checkbox" name="natTraversal" id="ingestMedia" value="option1">
+                <input class="form-check-input" type="checkbox" id="ingestMedia" value="option1">
                 <label for="ingestMedia" class="form-check-label">Ingest media <small>(master only)</small></label>
             </div>
             <br>
