--- a/examples/index.html
+++ b/examples/index.html
@@ -76,7 +76,7 @@
                     <input class="form-check-input" type="checkbox" id="openDataChannel" value="datachannel">
                     <label for="openDataChannel" class="form-check-label">Open DataChannel</label>
                     <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
-                    <p>Open a channel which can be used for bidirectional peer-to-peer transfers of data.</p>
+                    <p>Open a channel which can be used for bidirectional peer-to-peer transfers of data, hence the name.</p>
                     <a href=&quot;https://www.w3.org/TR/webrtc/#rtcdatachannel&quot;>Additional information</a>
                     "><sup>&#9432;</sup></span>
                 </div>
@@ -146,7 +146,7 @@
             <div class="row datachannel">
                 <div class="col">
                     <div class="form-group">
-                      <textarea type="text" class="form-control local-message" placeholder="DataChannel Message"> </textarea>
+                      <textarea type="text" class="form-control local-message" placeholder="DataChannel message to send to all viewers"> </textarea>
                     </div>
                 </div>
                 <div class="col">
@@ -178,7 +178,7 @@
             <div class="row datachannel">
                 <div class="col">
                     <div class="form-group">
-                      <textarea type="text" class="form-control local-message" placeholder="DataChannel Message"> </textarea>
+                      <textarea type="text" class="form-control local-message" placeholder="DataChannel message to send to MASTER"> </textarea>
                     </div>
                 </div>
                 <div class="col">
