Update Trickle Ice Link

--- a/examples/index.html
+++ b/examples/index.html
@@ -121,7 +121,7 @@
                     <label for="useTrickleICE" class="form-check-label">Use trickle ICE</label>
                     <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
                     <p>ICE candidates are exchanged incrementally as soon as they become available (and simultaneously with the gathering of other candidates). Supported by browsers, but not by Alexa devices.</p>
-                    <a href=&quot;https://www.google.com/&quot;>Additional information</a>
+                    <a href=&quot;https://datatracker.ietf.org/doc/html/rfc8829#sec.ice-candidate-trickling&quot;>Additional information</a>
                 "><sup>&#9432;</sup></span>
                 </div>
             </div>
