Add debug button and also print stats

--- a/examples/index.html
+++ b/examples/index.html
@@ -240,6 +240,7 @@
         <div class="card bg-light mb-3">
             <div style="display: flex; justify-content: space-between;">
                 <div id="tabs">
+                    <button id="debug-button" class="btn btn-light" onClick="logLevelSelected(event)" data-level="DEBUG">DEBUG</button>
                     <button id="info-button" class="btn btn-primary" onClick="logLevelSelected(event)" data-level="INFO">INFO</button>
                     <button id="warn-button" class="btn btn-light" onClick="logLevelSelected(event)" data-level="WARN">WARN</button>
                     <button id="error-button" class="btn btn-light" onClick="logLevelSelected(event)" data-level="ERROR">ERROR</button>
