--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,7 @@
     <script src="aws-sdk-2.1363.0.min.js"></script>
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
@@ -125,6 +126,18 @@
                 "><sup>&#9432;</sup></span>
                 </div>
             </div>
+            <h4>Amazon KVS WebRTC DQP</h4>
+            <div class="form-group">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="enableDQPmetrics" value="enableDQPmetrics">
+                    <label for="enableDQPmetrics" class="form-check-label">Enable KVS WebRTC DQP Test and Metrics <small>(Viewer only)</small></label>
+                    <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                    <p>Enables the test and metrics for the Amazon KVS WebRTC Device Qualification Program.</p>
+                    <a href=&quot;https://aws.amazon.com/partners/programs/dqp/&quot;>Additional information</a>
+                "><sup>&#9432;</sup></span>
+                </div>
+            </div>
+            <hr>
             <div>
                 <button id="master-button" type="submit" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="submit" class="btn btn-primary">Start Viewer</button>
@@ -192,6 +205,26 @@
                   <button type="button" class="btn btn-primary">Send DataChannel Message</button>
                 </span>
                 <button id="stop-viewer-button" type="button" class="btn btn-primary">Stop Viewer</button>
+            </div>
+        </div>
+
+        <div id="dqpmetrics" class="d-none">
+            <h3 id="dqpmetrics-header">DQP Test Metrics (from Master)</h3>
+            <div class="row">
+                <div class="col">
+                    <div class="card bg-light mb-3">
+                        <div id="dqp-test"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card bg-light mb-3">
+                        <canvas id="metricsChart" style="width:100%"; height="400px"></canvas>
+                    </div>
+                </div>
+            </div>
+            <h3 id="live-stats-header">Live Stats (from Master)</h3>
+            <div class="card bg-light mb-3">
+                <div id="webrtc-live-stats"></div>
             </div>
         </div>
 
