Ads STUN only option on WebRTC test page

--- a/examples/index.html
+++ b/examples/index.html
@@ -112,6 +112,10 @@
                     <label class="form-check-label" for="forceTURN">TURN Only <small>(force cloud relay)</small></label>
                 </div>
                 <div class="form-check form-check">
+                    <input class="form-check-input" type="radio" name="natTraversal" id="forceSTUN" value="option4">
+                    <label class="form-check-label" for="forceSTUN">STUN Only</label>
+                </div>
+                <div class="form-check form-check">
                     <input class="form-check-input" type="radio" name="natTraversal" id="natTraversalDisabled" value="option1">
                     <label class="form-check-label" for="natTraversalDisabled">Disabled</label>
                 </div>
