--- a/examples/index.html
+++ b/examples/index.html
@@ -92,6 +92,8 @@
                 <label for="ingestMedia" class="form-check-label">Ingest media <small>(master only)</small></label>
                 <div id="webrtc-storage-invalid-feedback" class="invalid-feedback">Audio and video must be enabled for WebRTC Storage!</div>
             </div>
+            <button id="listStorageChannels" class="btn btn-primary" style="font-size : 14px;">List Storage Channels</button>
+            <p><small>Output the ARNs of all signaling channels configured for storage and their associated stream's ARN.</small></p>
             <h4>Video Resolution</h4>
             <p><small>Set the desired video resolution and aspect ratio.</small></p>
             <div class="form-group">
@@ -271,6 +273,7 @@
 <script src="./master.js"></script>
 <script src="./viewer.js"></script>
 <script src="./createSignalingChannel.js"></script>
+<script src="./listStorageChannels.js"></script>
 <script src="./app.js"></script>
 
 </body>
