Add functionality to describe media storage configuration button

--- a/examples/index.html
+++ b/examples/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <button id="describeMediaStorageConfiguration" class="btn btn-primary">Describe Media Storage Configuration</button>
+                <button id="describe-media-storage-configuration-button" class="btn btn-primary">Describe Media Storage Configuration</button>
 
                 <button id="listStorageChannels" class="btn btn-primary">List Storage Channels</button>
                 <p><small>List storage channels outputs the ARNs of all signaling channels configured for storage and their associated stream's ARN.</small></p>
@@ -282,6 +282,7 @@
 <script src="./createSignalingChannel.js"></script>
 <script src="./listStorageChannels.js"></script>
 <script src="./updateMediaStorageConfiguration.js"></script>
+<script src="./describeMediaStorageConfiguration.js"></script>
 <script src="./app.js"></script>
 
 </body>
