--- a/examples/index.html
+++ b/examples/index.html
@@ -98,9 +98,17 @@
                 <div class="form-group">
                     <button id="describe-media-storage-configuration-button" class="btn btn-primary">Describe Media Storage Configuration</button>
                 </div>
-                <div class="form-group justify-content-center align-items-center">
+                <div class="form-group">
                     <button id="listStorageChannels" class="btn btn-primary">List All Media Storage Channels</button>
                     <p><small>List storage channels outputs the ARNs of all signaling channels configured for storage and their associated stream's ARN.</small></p>
+                </div>
+                <div class="form-group form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="ingest-media" value="audio" checked>
+                    <label for="sendAudio" class="form-check-label">Ingestor and storage peer joins automatically</label>
+                    <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                    <p>If media ingestion and storage is configured, after connecting to Kinesis Video Signaling, this sample application will invoke the JoinStorageSession API to have the Kinesis video producing device join the WebRTC session as a viewer.</p>
+                    <a href=&quot;https://docs.aws.amazon.com/kinesisvideostreams/latest/dg/API_webrtc_JoinStorageSession.html&quot;>Additional information</a>
+                    "><sup>&#9432;</sup></span>
                 </div>
             </div>
             <h4>Video Resolution</h4>
