Hide webrtc ingestion stuff by default

--- a/examples/index.html
+++ b/examples/index.html
@@ -86,7 +86,7 @@
                     "><sup>&#9432;</sup></span>
                 </div>
             </div>
-            <h4>WebRTC Ingestion and Storage</h4>
+            <details id="webrtc-ingestion-and-storage-group"><summary class="h4">WebRTC Ingestion and Storage</summary>
             <div>
                 <p><small>Configure which stream to ingest and store media to. Call update media storage configuration with an empty Stream name to disable this feature.</small></p>
                 <div class="form-group input-group">
@@ -111,6 +111,7 @@
                     "><sup>&#9432;</sup></span>
                 </div>
             </div>
+            </details>
             <h4>Video Resolution</h4>
             <p><small>Set the desired video resolution and aspect ratio.</small></p>
             <div class="form-group">
