--- a/examples/index.html
+++ b/examples/index.html
@@ -103,7 +103,7 @@
                     <p><small>List storage channels outputs the ARNs of all signaling channels configured for storage and their associated stream's ARN.</small></p>
                 </div>
                 <div class="form-group form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="ingest-media" value="audio" checked>
+                    <input class="form-check-input" type="checkbox" id="ingest-media" value="audio">
                     <label for="sendAudio" class="form-check-label"><i>Ingestion and storage peer</i> joins automatically</label>
                     <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
                     <p>If WebRTC Ingestion and Storage is configured, after connecting to Kinesis Video Signaling, this sample application will invoke the JoinStorageSession API to have the Kinesis video producing device join the WebRTC session as a viewer.</p>
