--- a/examples/index.html
+++ b/examples/index.html
@@ -113,6 +113,10 @@
                     <a href=&quot;https://docs.aws.amazon.com/kinesisvideostreams/latest/dg/API_webrtc_JoinStorageSession.html&quot;>Additional information</a>
                     "><sup>&#9432;</sup></span>
                 </div>
+                <div class="form-group form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="show-join-storage-session-button" value="audio">
+                    <label for="sendAudio" class="form-check-label">Show button to manually call JoinStorageSession API.</label></span>
+                </div>
             </div>
             </details>
             <h4>Video Resolution</h4>
@@ -298,6 +302,7 @@
                   <button id="send-message" type="button" class="btn btn-primary">Send DataChannel Message</button>
                 </span>
                 <button id="stop-master-button" type="button" class="btn btn-primary">Stop Master</button>
+                <button id="join-storage-session-button" type="button" class="btn btn-primary d-none">Join Storage Session</button>
             </div>
         </div>
 
@@ -388,6 +393,7 @@
 <script src="./updateMediaStorageConfiguration.js"></script>
 <script src="./describeMediaStorageConfiguration.js"></script>
 <script src="./createStream.js"></script>
+<script src="./joinStorageSession.js"></script>
 <script src="./app.js"></script>
 
 </body>
