Add space between buttons

--- a/examples/index.html
+++ b/examples/index.html
@@ -92,7 +92,7 @@
                 <div class="form-group input-group">
                     <input type="text" class="form-control" id="streamName" placeholder="Stream name">
                     <div class="input-group-append">
-                        <button id="create-stream-button" type="submit" class="btn btn-primary" title="Create a Kinesis Video Stream with this name." data-toggle="modal" data-target="#create-stream-modal">Create Stream</button>
+                        <button id="create-stream-button" type="submit" class="btn btn-primary ml-1 mr-1" title="Create a Kinesis Video Stream with this name." data-toggle="modal" data-target="#create-stream-modal">Create Stream</button>
                         <div class="modal fade" id="create-stream-modal" tabindex="-1" role="dialog" aria-labelledby="create-stream-modal-label" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
