--- a/examples/index.html
+++ b/examples/index.html
@@ -172,6 +172,66 @@
                 "><sup>&#9432;</sup></span>
                 </div>
             </div>
+
+            <details><summary class="h4">Advanced</summary>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-relay" checked>
+                                <label for="send-relay" class="form-check-label">Send <code>relay</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-relay" checked>
+                                <label for="accept-relay" class="form-check-label">Accept <code>relay</code> candidates from peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-srflx" checked>
+                                <label for="send-srflx" class="form-check-label">Send <code>srflx</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-srflx" checked>
+                                <label for="accept-srflx" class="form-check-label">Accept <code>srflx</code> candidates from peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-host" checked>
+                                <label for="send-host" class="form-check-label">Send <code>host</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-host" checked>
+                                <label for="accept-host" class="form-check-label">Accept <code>host</code> candidates from peer</label>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-prflx" checked>
+                                <label for="send-prflx" class="form-check-label">Send <code>prflx</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-prflx" checked>
+                                <label for="accept-prflx" class="form-check-label">Accept <code>prflx</code> candidates from peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-tcp" checked>
+                                <label for="send-tcp" class="form-check-label">Send <code>tcp</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-tcp" checked>
+                                <label for="accept-tcp" class="form-check-label">Accept <code>tcp</code> candidates from peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="send-udp" checked>
+                                <label for="send-udp" class="form-check-label">Send <code>udp</code> candidates to peer</label>
+                            </div>
+                            <div class="form-check form-check">
+                                <input class="form-check-input" type="checkbox" id="accept-udp" checked>
+                                <label for="accept-udp" class="form-check-label">Accept <code>udp</code> candidates from peer</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </details>
+
             <hr>
             <div>
                 <button id="master-button" type="submit" class="btn btn-primary">Start Master</button>
@@ -291,6 +351,8 @@
                 <div id="webrtc-live-stats"></div>
             </div>
         </div>
+
+
 
         <h3 id="logs-header">Logs</h3>
         <div class="card bg-light mb-3">
