--- a/examples/index.html
+++ b/examples/index.html
@@ -174,6 +174,7 @@
             </div>
 
             <details><summary class="h4">Advanced</summary>
+                <p><small>Filter settings for which ICE candidates and sent to and received from the peer.</small></p>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm">
