Disable datachannel for WebRTC ingestion and remove remote-view in ingestion mode

--- a/examples/index.html
+++ b/examples/index.html
@@ -280,7 +280,7 @@
                     <h5>Master Section</h5>
                     <div class="video-container"><video class="local-view" autoplay playsinline controls muted></video></div>
                 </div>
-                <div id="viewer-view-holder" class="col">
+                <div id="viewer-view-holder" class="col remote">
                     <h5>Viewer Return Channel</h5>
                     <div id="empty-video-placeholder" class="video-container"><video class="remote-view" autoplay playsinline controls></video></div>
                 </div>
@@ -291,7 +291,7 @@
                       <textarea type="text" class="form-control local-message" placeholder="DataChannel message to send to all viewers"> </textarea>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col remote">
                     <div class="card bg-light mb-3">
                         <pre class="remote-message card-body text-monospace preserve-whitespace"></pre>
                     </div>
