Adjust stop button color

--- a/examples/index.html
+++ b/examples/index.html
@@ -301,7 +301,7 @@
                 <span class="send-message datachannel">
                   <button id="send-message" type="button" class="btn btn-primary">Send DataChannel Message</button>
                 </span>
-                <button id="stop-master-button" type="button" class="btn btn-primary">Stop Master</button>
+                <button id="stop-master-button" type="button" class="btn btn-danger">Stop Master</button>
                 <button id="join-storage-session-button" type="button" class="btn btn-primary d-none">Join Storage Session</button>
             </div>
         </div>
@@ -334,7 +334,7 @@
                 <span class="send-message datachannel d-none">
                   <button type="button" class="btn btn-primary">Send DataChannel Message</button>
                 </span>
-                <button id="stop-viewer-button" type="button" class="btn btn-primary">Stop Viewer</button>
+                <button id="stop-viewer-button" type="button" class="btn btn-danger">Stop Viewer</button>
             </div>
         </div>
 
