--- a/examples/index.html
+++ b/examples/index.html
@@ -304,6 +304,7 @@
                 </span>
                 <button id="stop-master-button" type="button" class="btn btn-danger">Stop Master</button>
                 <button id="join-storage-session-button" type="button" class="btn btn-primary d-none">Join Storage Session</button>
+                <button id="share-screen-button" type="button" class="btn btn-primary">Share Screen</button>
             </div>
         </div>
 
