Semi-automated JS page

--- a/examples/index.html
+++ b/examples/index.html
@@ -348,6 +348,7 @@
             <div>
                 <button id="master-button" type="submit" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="submit" class="btn btn-primary">Start Viewer</button>
+                <button id="repeat-button" type="submit" class="btn btn-warning">Repeat 450 times</button>
             </div>
         </form>
 
