Migrate the test page to v3

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./app.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="aws-sdk-all-2.1646.0.js"></script>
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="./aws-sdk-3.758.0-kvswebrtc.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
@@ -443,6 +443,7 @@
 <div id="test"></div>
 
 <script src="../kvs-webrtc.js"></script>
+<script src="./app.js"></script>
 <script src="./channelHelper.js"></script>
 <script src="./mediaHelper.js"></script>
 <script src="./answerer.js"></script>
@@ -455,7 +456,6 @@
 <script src="./createStream.js"></script>
 <script src="./joinStorageSession.js"></script>
 <script src="./joinStorageSessionAsViewer.js"></script>
-<script src="./app.js"></script>
 
 </body>
 </html>
